--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,6 @@
 :root {
   --primary-color: #fff;
   --secondary-color: #001240;
-  --fontTitle: "Geneva", sans-serif;
   --fontText: "Geneva", sans-serif;
 }
 
@@ -25,10 +24,11 @@ body {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  background-color: #001240;
 }
 
 .logo img {
-  width: 255px;
+  width: 125px;
 }
 
 .navbarLink a {
@@ -37,7 +37,7 @@ body {
   font-size: 1.4em;
   text-decoration: none;
   margin-left: 140px;
-  font-family: var(--fontTitle);
+  font-family: var(--fontText);
 }
 
 .navbarLink a::before {
@@ -85,7 +85,7 @@ body {
   flex-direction: column;
 }
 .message-bienvenue h1 {
-  font-family: var(--fontTitle);
+  font-family: var(--fontText);
   font-size: 2em;
 }
 
@@ -120,10 +120,67 @@ body {
   align-items: center;
   font-family: var(--fontText);
   font-size: 1.3;
-  margin: 75px 0px;
+  margin: 100px 0px 20px;
 }
 
 .social-link i {
   color: #fff;
   margin-left: 30px;
+}
+
+.personal-presentation {
+  width: 50%;
+  color: var(--primary-color);
+  margin-top: 150px;
+  font-family: var(--fontText);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.personal-presentation h1 {
+  text-decoration: underline;
+  /* margin-top: 50px; */
+}
+
+.infos p,
+.competences ul,
+.exp h3,
+.hobbies ul {
+  margin-top: 20px;
+  line-height: 1.8em;
+}
+
+.infos h2,
+.competences h2,
+.exp h2,
+.hobbies h2 {
+  margin-top: 70px;
+  display: flex;
+  justify-content: center;
+  font-size: 1.6em;
+}
+
+.competences ul,
+.hobbies ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+}
+
+.competences ul {
+  margin-left: 40px;
+}
+
+.competences ul li,
+.exp i,
+.hobbies ul {
+  margin-top: 25px;
+  font-size: 1.1em;
+}
+
+.button-mesprojets .button-style {
+  margin-top: 50px;
 }
