--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,7 +32,6 @@ body {
 }
 
 .navbarLink a {
-  position: relative;
   color: var(--primary-color);
   font-size: 1.4em;
   text-decoration: none;
@@ -40,18 +39,8 @@ body {
   font-family: var(--fontText);
 }
 
-.navbarLink a::before {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 0;
-  height: 2px;
-  background: #fff;
-}
-
-.navbarLink a:hover::before {
-  width: 100%;
+.navbarLink a:hover {
+  text-decoration: underline;
 }
 
 .welcome {
@@ -142,13 +131,13 @@ body {
 
 .personal-presentation h1 {
   text-decoration: underline;
-  /* margin-top: 50px; */
 }
 
 .infos p,
 .competences ul,
 .exp h3,
-.hobbies ul {
+.hobbies ul,
+.card-content p {
   margin-top: 20px;
   line-height: 1.8em;
 }
@@ -183,4 +172,52 @@ body {
 
 .button-mesprojets .button-style {
   margin-top: 50px;
+}
+
+.link-style {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
+.link-style:hover {
+  text-decoration: underline;
+}
+
+.project {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 150px;
+}
+
+.card-content {
+  width: 400px;
+  border-radius: 7px;
+  overflow: hidden;
+  margin: 20px;
+  color: var(--primary-color);
+  font-family: var(--fontText);
+}
+
+.card-content img {
+  height: 320px;
+}
+
+.card-content ul {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  list-style-type: none;
+}
+
+.card-content li img {
+  margin-top: 10px;
+  width: auto;
+  height: 40px;
+}
+
+.card-content h1,
+.card-content p,
+.card-content button {
+  margin-top: 20px;
 }
