--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,6 +57,26 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: url("../img/coding-person.webp");
+  -webkit-background-size: cover;
+  background-size: cover;
+  background-position: center center;
+  height: 550px;
+  width: 550px;
+  box-shadow: 0 20px 5px 5px rgba(0, 0, 0, 0.2);
+  animation: animate 5s ease-in-out infinite;
+  transition: all 1s ease-in-out;
+}
+@keyframes animate {
+  0% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
+  50% {
+    border-radius: 30% 60% 70% 30%/50% 60% 30% 60%;
+  }
+  100% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
 }
 
 .coding-person {
