--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,13 +29,13 @@ body {
 }
 
 .logo img {
-  width: 125px;
+  width: 100px;
 }
 
 .active {
   color: #81b3ff;
   font-size: 1.4em;
-  text-decoration: underline;
+  text-decoration: none;
   margin-left: 140px;
   font-family: var(--fontText);
   opacity: 1;
@@ -62,7 +62,7 @@ body {
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  margin-top: 250px;
+  margin-top: 200px;
 }
 
 /* Profil animation */
@@ -188,7 +188,6 @@ body {
 .competences h2,
 .exp h2,
 .hobbies h2 {
-  /* margin-top: 70px; */
   display: flex;
   justify-content: center;
   font-size: 1.6em;
@@ -252,6 +251,15 @@ h3 a {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+
+.title-project {
+  display: flex;
+  justify-content: center;
+  margin-top: 125px;
+  margin-bottom: 50px;
+  color: var(--primary-color);
+  font-family: var(--fontText);
 }
 
 .card-content {
