--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,7 @@ body {
   color: #81b3ff;
   font-size: 1.4em;
   text-decoration: none;
-  margin-left: 140px;
+  margin-left: 75px;
   font-family: var(--fontText);
   opacity: 1;
 }
@@ -45,7 +45,7 @@ body {
   color: var(--primary-color);
   font-size: 1.4em;
   text-decoration: none;
-  margin-left: 140px;
+  margin-left: 75px;
   font-family: var(--fontText);
   opacity: 0.5;
   transition: opacity 0.3s;
@@ -71,7 +71,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 230px;
+  margin-left: 130px;
   background: url("../img/coding-person.webp");
   -webkit-background-size: cover;
   background-size: cover;
@@ -214,6 +214,10 @@ body {
 .hobbies ul {
   margin-top: 25px;
   font-size: 1.1em;
+}
+.exp i {
+  color: #7fb4ff;
+  opacity: 75%;
 }
 
 .button-mesprojets .button-style {
@@ -361,7 +365,7 @@ h3 a {
   bottom: -150px;
   left: 5%;
   font-size: 5rem;
-  animation: spin 16s linear infinite;
+  animation: spin 10s linear infinite;
 }
 
 .bg-area li:nth-child(1) {
@@ -417,5 +421,121 @@ h3 a {
   100% {
     transform: translateY(-800px) rotate(360deg);
     opacity: 0;
+  }
+}
+/* end of the animation of emoji */
+
+/* RESPONSIVE TABLETTE */
+@media (426px <= width <= 834px) {
+  /* Index */
+  .style-nav-links {
+    margin-left: 25px;
+  }
+
+  .welcome {
+    margin-top: 145px;
+  }
+
+  .photo-profil {
+    margin-left: 50px;
+  }
+
+  /* Page presentation */
+  .competences ul {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .card-style {
+    margin: 0px;
+    margin-top: 100px;
+    padding: 0px;
+  }
+
+  div fieldset {
+    padding: 10px;
+  }
+
+  /* Mes projets */
+  .card-content:nth-child(2) {
+    margin-top: 100px;
+  }
+
+  /* Contact */
+  .email-link {
+    margin-bottom: 185px;
+  }
+}
+
+/* RESPONSIVE MOBILE */
+@media (1px <= width <= 425px) {
+  /* Page accueil */
+  .welcome {
+    display: flex;
+    flex-direction: column;
+    margin-top: 150px;
+  }
+  .photo-profil {
+    margin-left: 25px;
+  }
+  .message-bienvenue {
+    align-items: center;
+    margin-top: 30px;
+  }
+
+  .message-bienvenue h1 {
+    width: 70%;
+  }
+
+  .message-bienvenue h2 {
+    margin-top: 15px;
+  }
+  .message-bienvenue a {
+    margin-top: 15px;
+  }
+  .footer {
+    margin: 53px 22px 12px;
+  }
+  .social-link {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  /* Page présentation */
+  .personal-presentation {
+    width: 100%;
+  }
+  .infos p {
+    font-size: 0.9em;
+    line-height: 2em;
+  }
+
+  .competences ul {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .competences li img {
+    height: 50px;
+  }
+
+  .card-style {
+    margin: 40px 0px;
+    padding: 0px;
+    width: 90%;
+  }
+
+  div fieldset {
+    padding: 0px;
+    border-color: #001240;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 100px;
+    font-size: 0.8em;
+  }
+
+  .hobbies {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
