--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,6 +32,10 @@ body {
   width: 100px;
 }
 
+.hamburger-menu {
+  display: none;
+}
+
 .active {
   color: #81b3ff;
   font-size: 1.4em;
@@ -71,7 +75,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 130px;
+  margin-left: 200px;
   background: url("../img/coding-person.webp");
   -webkit-background-size: cover;
   background-size: cover;
@@ -469,6 +473,91 @@ h3 a {
 
 /* RESPONSIVE MOBILE */
 @media (1px <= width <= 425px) {
+  /* hide large navbar */
+  .navbarLink {
+    display: none;
+  }
+  .hamburger-menu {
+    display: contents;
+  }
+
+  /* burger */
+  #menu__toggle {
+    opacity: 0;
+  }
+  #menu__toggle:checked + .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked + .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0deg);
+  }
+  #menu__toggle:checked + .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__box {
+    left: 0 !important;
+  }
+  .menu__btn {
+    position: fixed;
+    top: 50px;
+    right: 25px;
+    width: 45px;
+    cursor: pointer;
+    z-index: 1;
+  }
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #7fb4ff;
+    transition-duration: 0.25s;
+  }
+  .menu__btn > span::before {
+    content: "";
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: "";
+    top: 8px;
+  }
+  .menu__box {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    background-color: #ffffffe8;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+    transition-duration: 0.25s;
+  }
+  .menu__item {
+    display: block;
+    padding: 12px 24px;
+    color: #333;
+    font-family: var(--fontText), sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    transition-duration: 0.25s;
+  }
+  .menu__item:hover {
+    background-color: #cfd8dc;
+  }
+
+  /* end burger */
+  .header {
+    padding: 0% 38%;
+  }
+
   /* Page accueil */
   .welcome {
     display: flex;
@@ -476,7 +565,9 @@ h3 a {
     margin-top: 150px;
   }
   .photo-profil {
-    margin-left: 25px;
+    margin-left: 100px;
+    height: 200px;
+    width: 200px;
   }
   .message-bienvenue {
     align-items: center;
