add of more space for the footer for contact page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -465,11 +465,14 @@ h3 a {
   .message-bienvenue a {
     margin-top: 10%;
   }
+  .email-link{
+    margin-top:200px;
+  }
   .welcome {
     margin-top: 250px;
   }
-  .footer {
-    margin: 150px 0px 20px;
+  .contact-foo {
+    margin: 350px 0px 20px;
   }
 }
 
