--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -153,6 +153,7 @@ body {
   font-family: var(--fontText);
   font-size: 1.3;
   margin: 100px 0px 20px;
+  opacity: 70%;
 }
 
 .social-link i {
@@ -186,6 +187,7 @@ body {
 .card-content p {
   margin-top: 20px;
   line-height: 2em;
+  padding: 28px;
 }
 
 .card-style {
@@ -227,6 +229,7 @@ body {
 .exp i {
   color: #7fb4ff;
   opacity: 75%;
+  padding: 28px;
 }
 
 .button-mesprojets .button-style {
@@ -519,6 +522,7 @@ h3 a {
 
   .footer {
     margin-top: 150px;
+
   }
 }
 
