--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,8 @@
 :root {
   --primary-color: #fff;
-  --secondary-color: #001240;
+  --secondary-color: #004190;
   --third-color: #ffd961;
-  --fontText: "Gill Sans", sans-serif;
-  --fontVar: "Gill Sans", sans-serif;
+  --fontText: "Montserrat", sans-serif;
 }
 
 * {
@@ -13,7 +12,6 @@
 }
 
 body {
-  /* background: rgb(5, 33, 107); */
   background: var(--secondary-color);
 }
 
