--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -672,7 +672,7 @@ h3 a {
 
   div fieldset {
     padding: 0px;
-    border-color: #001240;
+    border-color: var(--secondary-color);
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 100px;
